[package]
name = "windows-helpers"
version = "0.3.1"
description = "Helpers for the windows crate"
categories = ["development-tools::ffi", "rust-patterns"]
keywords = ["windows"]
repository = "https://github.com/Enyium/windows-helpers-rs"
documentation = "https://docs.rs/windows-helpers"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
features = ["windows_latest_compatible_all"]

[dependencies]
# New `windows` versions must be added or very old versions must be removed below in multiple spots, in `/scripts/verify.ps1` and in `/.vscode/settings.json`.
windows_v0_48 = { optional = true, package = "windows", version = "0.48.0", features = ["Win32_Foundation"] }
windows_v0_52 = { optional = true, package = "windows", version = "0.52.0", features = ["Win32_Foundation"] }
num-traits = "0.2.17"

# Something like `[target.'cfg(feature = "windows_v0_52")'.dependencies]` (and requiring `windows` with that version, not renaming it) may be more desirable to make this file DRYer and also allow us to specify yet unreleased future versions for forward compatibility. Cargo issue: <https://github.com/rust-lang/cargo/issues/8170> (still open in Dec. 2023).

[features]
Win32_Foundation = []
Win32_Graphics_Gdi = []
Win32_System_LibraryLoader = []
Win32_System_Memory = []
Win32_UI_WindowsAndMessaging = []

# (For VS Code development, a feature encompassing all features for a `windows` crate version is activated in `/.vscode/settings.json`. Changing the version in it can change the errors shown.)

windows_v0_48_all = ["windows_v0_48", "windows_v0_48_Win32_Foundation", "windows_v0_48_Win32_Graphics_Gdi", "windows_v0_48_Win32_System_LibraryLoader", "windows_v0_48_Win32_System_Memory", "windows_v0_48_Win32_UI_WindowsAndMessaging"]
windows_v0_48 = ["dep:windows_v0_48"]
windows_v0_48_Win32_Foundation = ["Win32_Foundation", "windows_v0_48/Win32_Foundation"]
windows_v0_48_Win32_Graphics_Gdi = ["Win32_Graphics_Gdi", "windows_v0_48/Win32_Graphics_Gdi"]
windows_v0_48_Win32_System_LibraryLoader = ["Win32_System_LibraryLoader", "windows_v0_48/Win32_System_LibraryLoader"]
windows_v0_48_Win32_System_Memory = ["Win32_System_Memory", "windows_v0_48/Win32_System_Memory"]
windows_v0_48_Win32_UI_WindowsAndMessaging = ["Win32_UI_WindowsAndMessaging", "windows_v0_48/Win32_UI_WindowsAndMessaging"]

windows_v0_52_all = ["windows_v0_52", "windows_v0_52_Win32_Foundation", "windows_v0_52_Win32_Graphics_Gdi", "windows_v0_52_Win32_UI_WindowsAndMessaging"]
windows_v0_52 = ["dep:windows_v0_52"]
windows_v0_52_Win32_Foundation = ["Win32_Foundation", "windows_v0_52/Win32_Foundation"]
windows_v0_52_Win32_Graphics_Gdi = ["Win32_Graphics_Gdi", "windows_v0_52/Win32_Graphics_Gdi"]
windows_v0_52_Win32_UI_WindowsAndMessaging = ["Win32_UI_WindowsAndMessaging", "windows_v0_52/Win32_UI_WindowsAndMessaging"]

# The latest compatible version should also be specified in the `dev-dependencies` section (in name and `version`).
windows_latest_compatible_all = ["windows_v0_52_all"]

[dev-dependencies]
# Additional `windows` features for test modules. Only tested with latest version established in this crate.
windows_v0_52 = { package = "windows", version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_UI_Shell",
    "Win32_Globalization",
] }
regex = "1.10.2"
